# zkRust-dkim

./: Cargo.toml
src/: email.eml  main.rs
